fix: set scrollbar height so horizontal scrollbar matches vertical (#695)

--- a/src/renderer/styles/_general.css
+++ b/src/renderer/styles/_general.css
@@ -30,7 +30,7 @@ input:focus {
 }
 
 ::-webkit-scrollbar {
-  @apply .w-2 .rounded-full;
+  @apply .w-2 .h-2 .rounded-full;
   background-color: rgba(0, 0, 0, 0);
 }
 ::-webkit-scrollbar-track:hover {
